@@ -3,6 +3,7 @@
   - Upgraded gems:
     - acts_as_tree, bootsnap, bundler-audit, factory_bot, paper_trail, rails, rails-html-sanitizer, timecop, thor, unicorn
   - Bugs fixes:
+    - Attachments: Fix attachments not showing or being validated correctly
     - Nodes: Prevent evidence labels linking to external resources
     - Bug tracker items:
       - [item]
